Added new swagger.json
