# controllers/contacts.js
@@ -2,6 +2,7 @@ const mongodb = require('../data/database');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
+    //#swagger.tags = ['Contacts']
     const result = await mongodb.getDatabase().db().collection('userContacts').find();
     result.toArray().then((contacts) => {
         res.setHeader('Content-type', 'application/json');
@@ -10,6 +11,7 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
+    //#swagger.tags = ['Contacts']
     const userId = new ObjectId(req.params.id)
     const result = await mongodb.getDatabase().db().collection('userContacts').find({_id: userId});
     result.toArray().then((contacts) => {
@@ -19,6 +21,7 @@ const getSingle = async (req, res) => {
 };
 
 const createContact = async (req, res) => {
+    //#swagger.tags = ['Contacts']
     const userId = new ObjectId(req.params.id);
     const contact = {
         fullName: req.body.name,
@@ -34,6 +37,7 @@ const createContact = async (req, res) => {
 };
 
 const updateContact = async (req, res) => {
+    //#swagger.tags = ['Contacts']
     const userId = new ObjectId(req.params.id);
     const contact = {
         fullName: req.body.name,
@@ -49,6 +53,7 @@ const updateContact = async (req, res) => {
 };
 
 const deleteContact = async (req, res) => {
+    //#swagger.tags = ['Contacts']
     const userId = new ObjectId(req.params.id);
     const contact = {
         fullName: req.body.name,
